test/valid/test26.sl
integer x;
print(x + 5);