test/invalid/test12.sl
integer x; x := 5 / 0;
print(x);